# ty-vscode

./: .vscodeignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TROUBLESHOOTING.md  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  renovate.json5
.github/workflows/: ci.yaml  release.yaml
bundled/tool/: find_ty_binary_path.py
scripts/: release.py
src/: client.ts  extension.ts  vscode-python-environments.ts
src/common/: commands.ts  constants.ts  diagnostics.ts  logger.ts  python.ts  server.ts  settings.ts  status.ts  utilities.ts
types/@vscode/python-environments/: index.d.ts
