[project]
name = "ty-vscode"
version = "2025.0.0"
description = "A Visual Studio Code extension with support for the ty type checker and language server."
authors = [{ name = "Astral Software Inc.", email = "hey@astral.sh" }]
requires-python = ">=3.8"
license = "MIT"
dependencies = ["ty==0.0.0a1"]

[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "UP", "I", "N"]
